<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity_Transferencia_edit"
    android:background="@color/colorBlanco"
    android:id="@+id/btn_container">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/ib_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descripcion"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/calendario24_lateral"
        app:layout_constraintEnd_toStartOf="@+id/tv_fecha"
        app:layout_constraintTop_toTopOf="@+id/tv_fecha" />

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:text="@string/prueba"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tv_monto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/fondo_boton"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:padding="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/cero"
            android:textColor="@color/colorBlanco"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

        <ImageButton
            android:id="@+id/ib_borrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/tv_monto"
            app:layout_constraintTop_toTopOf="@+id/tv_monto"
            app:srcCompat="@drawable/eliminar32_oscuro"
            android:contentDescription="@string/descripcion"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:ems="15"
        android:inputType="textPersonName"
        android:hint="@string/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1" />

    <LinearLayout
        android:id="@+id/lldisponible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/disponible"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tv_disponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lldisponible">

        <Spinner
            android:id="@+id/view_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textColorHint="@color/colorHint"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/descripcion"
            app:srcCompat="@drawable/transferencia24_spinners"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="280dp" />

        <Spinner
            android:id="@+id/view_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textColorHint="@color/colorHint"/>


    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorBlanco"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_uno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/uno"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_dos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/dos"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_tres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/tres"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_mas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/mas"
                android:textColorHint="@color/colorRojo"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_cuatro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/cuatro"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_cinco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/cinco"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_seis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/seis"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_menos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/menos"
                android:textColorHint="@color/colorRojo"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_siete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/siete"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_ocho"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/ocho"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_nueve"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/nueve"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_por"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/por"
                android:textColorHint="@color/colorRojo"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_cero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/cero"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_punto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/punto"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_igual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/igual"
                android:textColorHint="@color/colorRojo"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_entre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/entre"
                android:textColorHint="@color/colorRojo"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/edittransferencia"
                android:onClick="editTransferencia"
                android:padding="20dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/btn_mostrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/calculadora24_oscura"/>
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>